--- a/my-react-app/src/pages/Contact.css
+++ b/my-react-app/src/pages/Contact.css
@@ -3,7 +3,7 @@
   text-align: center;
   color: white;
   padding: 50px 20px;
-  background: #0a0a0a;
+  background: #black;
   min-height: 100vh;
 }
 
